finished up keyword search and topic sorting

--- a/courses.html
+++ b/courses.html
@@ -115,7 +115,7 @@
         <div class="container">
           <div class="row py-4">
             <div class="col-12 col-sm-12 col-lg-4 box1">
-              <span class="text-white font-weight-bold drop-down-title"
+              <span class="keywordOptions text-white font-weight-bold drop-down-title"
                 >KEYWORDS</span
               >
 
@@ -127,7 +127,7 @@
                 </div>
                 <input
                   type="text"
-                  class="form-control search-text-area"
+                  class="searchInput form-control search-text-area"
                   aria-label="Default"
                   aria-describedby="inputGroup-sizing-default"
                   placeholder="Search by keywords"
@@ -135,7 +135,7 @@
               </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-4 box2">
-              <span class="text-white font-weight-bold drop-down-title"
+              <span class="topicOptions text-white font-weight-bold drop-down-title"
                 >TOPIC</span
               >
               <div class="dropdown">
@@ -148,11 +148,11 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>Novice</span>
+                  <span id="selectedTopic">Novice</span>
                 </a>
 
                 <div
-                  class="dropdown-menu mt-0"
+                  class="sortOptions dropdown-menu mt-0"
                   aria-labelledby="dropdownMenuLink"
                 >
                   <a class="dropdown-item" href="#">Novice</a>
