adjusting click events to pass everything in the filter system. Also finished up sortBy feature

--- a/courses.html
+++ b/courses.html
@@ -175,11 +175,11 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>Most Popular</span>
+                  <span id="sortBy">Most Popular</span>
                 </a>
 
                 <div
-                  class="dropdown-menu mt-0"
+                  class="sortBy dropdown-menu mt-0"
                   aria-labelledby="dropdownMenuLink"
                 >
                   <a class="dropdown-item" href="#">Most Popular</a>
