dynamically displays video counts

--- a/courses.html
+++ b/courses.html
@@ -195,7 +195,7 @@
       <section class="section results">
         <div class="container">
           <div class="section-title">
-            <span class="text-muted video-count">11 videos</span>
+            <span class="text-muted video-count videoCount"></span>
           </div>
           <div class="apiVideos d-flex col-12 flex-wrap p-0">
             
